--- a/VolumnUtility/VolumnUtility.csproj
+++ b/VolumnUtility/VolumnUtility.csproj
@@ -62,7 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="SystemVolumn.cs" />
+    <Compile Include="SystemVolume.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
